Update Barcode iOS SDK docs for release v3.0.3.

--- a/barcode-scanner-sdk/ios/Enums/SBSDKCapturePhotoQualityPrioritization.html
+++ b/barcode-scanner-sdk/ios/Enums/SBSDKCapturePhotoQualityPrioritization.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SBSDKMedicalPlanStandardSubheading Class Reference</title>
+    <title>SBSDKCapturePhotoQualityPrioritization Enumeration Reference</title>
     <link rel="stylesheet" type="text/css" href="../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/objc/Class/SBSDKMedicalPlanStandardSubheading" class="dashAnchor"></a>
+    <a name="//apple_ref/objc/Enum/SBSDKCapturePhotoQualityPrioritization" class="dashAnchor"></a>
 
-    <a title="SBSDKMedicalPlanStandardSubheading Class Reference"></a>
+    <a title="SBSDKCapturePhotoQualityPrioritization Enumeration Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -38,7 +38,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../index.html">ScanbotBarcodeScannerSDK for iOS Reference</a>
       <img class="carat" src="../img/carat.png" />
-      SBSDKMedicalPlanStandardSubheading Class Reference
+      SBSDKCapturePhotoQualityPrioritization Enumeration Reference
     </p>
 
     <div class="content-wrapper">
@@ -437,14 +437,14 @@
 
         <section class="section">
           <div class="section-content">
-            <h1>SBSDKMedicalPlanStandardSubheading</h1>
+            <h1>SBSDKCapturePhotoQualityPrioritization</h1>
               <div class="declaration">
                 <div class="language">
-                  <pre class="highlight objective_c"><code><span class="k">@interface</span> <span class="nc">SBSDKMedicalPlanStandardSubheading</span> <span class="p">:</span> <span class="nc">NSObject</span></code></pre>
+                  <pre class="highlight objective_c"><code><span class="k">enum</span> <span class="n">SBSDKCapturePhotoQualityPrioritization</span> <span class="o">:</span> <span class="n">NSUInteger</span> <span class="p">{}</span></code></pre>
 
                 </div>
               </div>
-            <p>German medical plan document subheading information description.</p>
+            <p>The priorization of still image quality and capturing speed. Has no effect on devices prior to iOS 13.0.</p>
 
           </div>
         </section>
@@ -456,9 +456,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)generalNotes"></a>
-                    <a name="//apple_ref/objc/Property/generalNotes" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)generalNotes">generalNotes</a>
+                    <a name="/c:@E@SBSDKCapturePhotoQualityPrioritization@SBSDKCapturePhotoQualityPrioritizationSpeed"></a>
+                    <a name="//apple_ref/objc/Case/SBSDKCapturePhotoQualityPrioritizationSpeed" class="dashAnchor"></a>
+                    <a class="token" href="#/c:@E@SBSDKCapturePhotoQualityPrioritization@SBSDKCapturePhotoQualityPrioritizationSpeed">SBSDKCapturePhotoQualityPrioritizationSpeed</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -466,19 +466,19 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>General notes.</p>
+                        <p>Captures a still image at the highest possible speed. The quality of the image may be degraded.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">strong</span><span class="p">)</span> <span class="n">NSArray</span><span class="o">&lt;</span><span class="n">NSString</span> <span class="o">*&gt;</span> <span class="o">*</span><span class="n">_Nonnull</span> <span class="n">generalNotes</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="n">SBSDKCapturePhotoQualityPrioritizationSpeed</span> <span class="o">=</span> <span class="mi">1</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">generalNotes</span><span class="p">:</span> <span class="p">[</span><span class="kt">String</span><span class="p">]</span> <span class="p">{</span> <span class="k">get</span> <span class="k">set</span> <span class="p">}</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">speed</span> <span class="o">=</span> <span class="mi">1</span></code></pre>
 
                         </div>
                       </div>
@@ -488,9 +488,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)fields"></a>
-                    <a name="//apple_ref/objc/Property/fields" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)fields">fields</a>
+                    <a name="/c:@E@SBSDKCapturePhotoQualityPrioritization@SBSDKCapturePhotoQualityPrioritizationBalanced"></a>
+                    <a name="//apple_ref/objc/Case/SBSDKCapturePhotoQualityPrioritizationBalanced" class="dashAnchor"></a>
+                    <a class="token" href="#/c:@E@SBSDKCapturePhotoQualityPrioritization@SBSDKCapturePhotoQualityPrioritizationBalanced">SBSDKCapturePhotoQualityPrioritizationBalanced</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -498,19 +498,19 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Fields.</p>
+                        <p>Balances capturing speed and image quality equally. This is the default value.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">strong</span><span class="p">)</span> <span class="n">NSArray</span><span class="o">&lt;</span><span class="n"><a href="../Classes/SBSDKMedicalPlanStandardSubheadingField.html">SBSDKMedicalPlanStandardSubheadingField</a></span> <span class="o">*&gt;</span> <span class="o">*</span><span class="n">_Nonnull</span> <span class="n">fields</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="n">SBSDKCapturePhotoQualityPrioritizationBalanced</span> <span class="o">=</span> <span class="mi">2</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">fields</span><span class="p">:</span> <span class="p">[</span><span class="kt"><a href="../Classes/SBSDKMedicalPlanStandardSubheadingField.html">SBSDKMedicalPlanStandardSubheadingField</a></span><span class="p">]</span> <span class="p">{</span> <span class="k">get</span> <span class="k">set</span> <span class="p">}</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">balanced</span> <span class="o">=</span> <span class="mi">2</span></code></pre>
 
                         </div>
                       </div>
@@ -520,9 +520,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)medicines"></a>
-                    <a name="//apple_ref/objc/Property/medicines" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)medicines">medicines</a>
+                    <a name="/c:@E@SBSDKCapturePhotoQualityPrioritization@SBSDKCapturePhotoQualityPrioritizationQuality"></a>
+                    <a name="//apple_ref/objc/Case/SBSDKCapturePhotoQualityPrioritizationQuality" class="dashAnchor"></a>
+                    <a class="token" href="#/c:@E@SBSDKCapturePhotoQualityPrioritization@SBSDKCapturePhotoQualityPrioritizationQuality">SBSDKCapturePhotoQualityPrioritizationQuality</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -530,51 +530,20 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Medicines.</p>
+                        <p>Captures a still image with the best possible quality in terms of noise, frozen motion and detail in low light.
+The speed of the capturing might be significantly reduced.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">strong</span><span class="p">)</span> <span class="n">NSArray</span><span class="o">&lt;</span><span class="n"><a href="../Classes/SBSDKMedicalPlanMedicine.html">SBSDKMedicalPlanMedicine</a></span> <span class="o">*&gt;</span> <span class="o">*</span><span class="n">_Nonnull</span> <span class="n">medicines</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="n">SBSDKCapturePhotoQualityPrioritizationQuality</span> <span class="o">=</span> <span class="mi">3</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">medicines</span><span class="p">:</span> <span class="p">[</span><span class="kt"><a href="../Classes/SBSDKMedicalPlanMedicine.html">SBSDKMedicalPlanMedicine</a></span><span class="p">]</span> <span class="p">{</span> <span class="k">get</span> <span class="k">set</span> <span class="p">}</span></code></pre>
-
-                        </div>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)prescriptions"></a>
-                    <a name="//apple_ref/objc/Property/prescriptions" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKMedicalPlanStandardSubheading(py)prescriptions">prescriptions</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Prescriptions.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">strong</span><span class="p">)</span> <span class="n">NSArray</span><span class="o">&lt;</span><span class="n"><a href="../Classes/SBSDKMedicalPlanSubheadingPrescription.html">SBSDKMedicalPlanSubheadingPrescription</a></span> <span class="o">*&gt;</span> <span class="o">*</span><span class="n">_Nonnull</span> <span class="n">prescriptions</span><span class="p">;</span></code></pre>
-
-                        </div>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">prescriptions</span><span class="p">:</span> <span class="p">[</span><span class="kt"><a href="../Classes/SBSDKMedicalPlanSubheadingPrescription.html">SBSDKMedicalPlanSubheadingPrescription</a></span><span class="p">]</span> <span class="p">{</span> <span class="k">get</span> <span class="k">set</span> <span class="p">}</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">quality</span> <span class="o">=</span> <span class="mi">3</span></code></pre>
 
                         </div>
                       </div>
