Update API docs for Capacitor DS

--- a/document-scanner-sdk/capacitor/api-docs/modules/index.html
+++ b/document-scanner-sdk/capacitor/api-docs/modules/index.html
@@ -105,6 +105,7 @@
 <a href="../interfaces/index.OCRResultBlock.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="../assets/icons.svg#icon-256"></use></svg><span>OCRResult<wbr/>Block</span></a>
 <a href="../interfaces/index.PDFMetadata.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="../assets/icons.svg#icon-256"></use></svg><span>PDFMetadata</span></a>
 <a href="../interfaces/index.Page.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="../assets/icons.svg#icon-256"></use></svg><span>Page</span></a>
+<a href="../interfaces/index.PdfExtractorArguments.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="../assets/icons.svg#icon-256"></use></svg><span>Pdf<wbr/>Extractor<wbr/>Arguments</span></a>
 <a href="../interfaces/index.PerformOCRArguments.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="../assets/icons.svg#icon-256"></use></svg><span>PerformOCRArguments</span></a>
 <a href="../interfaces/index.PerformOCRResult.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="../assets/icons.svg#icon-256"></use></svg><span>PerformOCRResult</span></a>
 <a href="../interfaces/index.PolygonPoint.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="../assets/icons.svg#icon-256"></use></svg><span>Polygon<wbr/>Point</span></a>
