Update API docs for RN BS v7.0.0

--- a/barcode-scanner-sdk/react-native/v7.0.0/types/CommonFieldType.html
+++ b/barcode-scanner-sdk/react-native/v7.0.0/types/CommonFieldType.html
@@ -17,7 +17,7 @@
 <li><code>EXPIRY_DATE</code>:
  Document expiry date field.</li>
 <li><code>EYE_COLOR</code>:
- Person height field.</li>
+ Person eye color field.</li>
 <li><code>HEIGHT</code>:
  Person height field.</li>
 <li><code>ISSUE_DATE</code>:
