NET MAUI 7.0: - Updated the API Docs based on new SDK updates. - Droid: Updated the first page of the API refs.

--- a/net/v7.0.0/index.html
+++ b/net/v7.0.0/index.html
@@ -74,7 +74,7 @@
 <h1 id="scanbotsdk-maui-and-net-api-docs">ScanbotSDK MAUI and .NET API docs</h1>
 
 <p>See <a href="api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.html">ScanbotSDK.MAUI</a> for API docs for our cross-platform MAUI API reference.</p>
-<p>See <a href="api/ScanbotSDK.NET.Droid/IO.Scanbot.Barcodescanner.html">ScanbotSDK.NET.Droid</a> for API docs for our Android binding library API reference.</p>
+<p>See <a href="api/ScanbotSDK.NET.Droid/IO.Scanbot.Sdk.ScanbotSDKInitializer.html">ScanbotSDK.NET.Droid</a> for API docs for our Android binding library API reference.</p>
 <p>See <a href="api/ScanbotSDK.NET.iOS/ScanbotSDK.iOS.html">ScanbotSDK.NET.iOS</a> for API docs for our iOS binding library API reference.</p>
 
 </article>
