--- a/net/v7.0.0/toc.html
+++ b/net/v7.0.0/toc.html
@@ -16,7 +16,7 @@
                     <a href="api/ScanbotSDK.MAUI/ScanbotSDK.MAUI.html" name="" title="MAUI API">MAUI API</a>
                 </li>
                 <li>
-                    <a href="api/ScanbotSDK.NET.Droid/IO.Scanbot.Barcodescanner.html" name="" title="Android API">Android API</a>
+                    <a href="api/ScanbotSDK.NET.Droid/IO.Scanbot.Sdk.ScanbotSDKInitializer.html" name="" title="Android API">Android API</a>
                 </li>
                 <li>
                     <a href="api/ScanbotSDK.NET.iOS/ScanbotSDK.iOS.html" name="" title="iOS API">iOS API</a>
